# nix

./: flake.nix  meson.build  meson.options
doc/manual/source/: SUMMARY.md.in
doc/manual/source/development/: sqlite-locking.md  sqlite-query-performance.md  sqlite-read-write-design.md  static-analysis-improvements.md  static-analysis-results-rethrow.md  static-analysis-results.md  static-analysis.md
packaging/: analysis.nix  components.nix  dev-shell.nix
packaging/analysis/clang-tidy-checks/: DanglingCStrCheck.cc  NixTidyModule.cc
packaging/analysis/clang-tidy-checks/tests/: lock-guard-temporary.cc  sqlite-non-literal.cc
scripts/: nix-trace-analyze.py
src/libmetrics/: build-metrics.cc  meson.build  package.nix
src/libmetrics/include/nix/metrics/: build-metrics.hh
src/libstore/: build-result.cc  local-store.cc  meson.build  meson.options  nar-info-disk-cache.cc  package.nix  serve-protocol.cc  sqlite.cc  worker-protocol.cc
src/libstore-tests/: meson.build  nar-info-disk-cache-bench.cc  output-registration-pipeline-bench.cc  serve-protocol.cc  sqlite.cc  worker-protocol.cc
src/libstore-tests/data/build-result/: not-deterministic.json  output-rejected.json  success.json
src/libstore-tests/data/serve-protocol/: build-result-2.3.json  build-result-2.7-compat.json  build-result-2.9.json
src/libstore-tests/data/worker-protocol/: build-result-1.27.json  build-result-1.28.json  build-result-1.29.json  build-result-1.37.json  build-result-build-telemetry-detail.json  build-result-build-telemetry.json  (+2 more)
src/libutil/linux/: cgroup.cc
src/nix/: build.cc
(+7 files in other folders)
